Added initial food bonus + code cleanup